Fixing the gradient picker z-index issue

--- a/client/style.scss
+++ b/client/style.scss
@@ -99,3 +99,7 @@ body.js.is-fullscreen-mode {
 .components-modal__content {
 	margin-top: 54px !important;
 }
+
+.components-custom-gradient-picker__gradient-bar .components-custom-gradient-picker__control-point-dropdown {
+	z-index: 11 !important;
+}
